Hide overflow-x to prevent horizontal scrollbars

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -4,6 +4,7 @@ html{
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    overflow-x: hidden;
 }
 
 a{
